added comment logic to posts/show view route, updated db seeds

--- a/app/views/posts/show.erb
+++ b/app/views/posts/show.erb
@@ -14,7 +14,6 @@
                 <section><%= @post.location %></section>
             </div>
             <p><%= @post.content %></p>    
-            <section class="replies-count">Replies: <%= @post.comments.count %></section>
             <section class="post-footer">Posted at <%= @post.created_at %></section>
         </div>
         
@@ -26,3 +25,37 @@
         </div>
     </div> <!-- close .row -->
 </div> <!-- close .container.post -->
+
+<% @comments.each do |comment| %>
+    <div class="container comments">
+    <div class="row">
+        <div class="col-sm-8 offset-sm-2 col-md-8 offset-md-2 col-lg-8 offset-lg-2">
+
+            <div class="post">
+            <div class="row">
+                <div class="col-3 user-info pull-left align-self-center">
+                    <div class="avatar">
+                    <img src="../images/no-photo.png" class="align-self-center mr-2">
+                    <p><%=(User.find(comment.user_id)).username%></p>
+                    <form><input type="button" value="+1" class="like-button align-self-center mr-2"> <%=comment.score%></form>
+                    </div>
+                </div>
+                
+                <div class="col-9 post-info pull-left">
+                    <p><%=comment.content%></p>    
+                    <section class="post-footer">Posted at <%= comment.created_at %></section>
+                </div>
+                
+                <div class="postbottom">
+                
+                    <div class="clearfix">
+                    
+                    </div>
+                </div>
+            </div> <!-- close .row -->
+            </div> <!-- close .post -->
+
+        </div> <!-- close .col-sm -->
+    </div> <!-- close .row -->
+    </div> <!-- close.container-posting -->
+<% end %>
