--- a/app/views/categories/show.erb
+++ b/app/views/categories/show.erb
@@ -21,7 +21,7 @@
               
             <div class="col-9 post-info pull-left">
                 <div class="post-title">
-                  <section><%= @state.name.capitalize %> / <%= post.title %></section>
+                  <section><a href="/categories/<%= @state.name %>/posts/<%=post.id%>"><%= @state.name.capitalize %> / <%= post.title %></a></section>
                   <section><%=post.location%></section>
                 </div>
                 <p><%=post.content%></p>    
