--- a/app/views/posts/show.erb
+++ b/app/views/posts/show.erb
@@ -1,30 +1,36 @@
-<div class="container post">
-    <div class="row">
-        <div class="col-3 user-info pull-left align-self-center">
-            <div class="avatar">
-                <img src="../images/no-photo.png" class="align-self-center mr-2">
-                <p><%= (User.find(@post.user_id)).username %></p>
-                <form><input type="button" value="+1" class="like-button align-self-center mr-2"> <%= @post.score %></form>
-            </div>
-        </div>
-        
-        <div class="col-9 post-info pull-left">
-            <div class="post-title">
-                <section><%= @post.city.capitalize %> / <%= @post.title %></section>
-                <section><%= @post.location %></section>
-            </div>
-            <p><%= @post.content %></p>    
-            <section class="post-footer">Posted at <%= @post.created_at %></section>
-        </div>
-        
-        <div class="postbottom">
+<div class= "container top-post">
+    <div class= "row">
+        <div class="col-sm-10 offset-sm-1 col-md-10 offset-md-1 col-lg-10 offset-lg-1">
+            <div class="container post">
+                <div class="row">
+                    <div class="col-3 user-info pull-left align-self-center">
+                        <div class="avatar">
+                            <img src="../images/no-photo.png" class="align-self-center mr-2">
+                            <p><%= (User.find(@post.user_id)).username %></p>
+                            <form><input type="button" value="+1" class="like-button align-self-center mr-2"> <%= @post.score %></form>
+                        </div>
+                    </div>
+                    
+                    <div class="col-9 post-info pull-left">
+                        <div class="post-title">
+                            <section><%= @post.city.capitalize %> / <%= @post.title %></section>
+                            <section><%= @post.location %></section>
+                        </div>
+                        <p><%= @post.content %></p>    
+                        <section class="post-footer">Posted at <%= @post.created_at %></section>
+                    </div>
+                    
+                    <div class="postbottom">
 
-            <div class="clearfix">
-            
-            </div>
-        </div>
+                        <div class="clearfix">
+                        
+                        </div>
+                    </div>
+                </div> <!-- close .row -->
+            </div> <!-- close .container -->
+        </div> 
     </div> <!-- close .row -->
-</div> <!-- close .container.post -->
+</div> <!-- close .container -->
 
 <% @comments.each do |comment| %>
     <div class="container comments">
