--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,7 +24,7 @@ body {
 }
 
 .navbar-light .navbar-nav .nav-link {
-    font-family: 'BioRhyme', serif;
+    font-family: BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
     color: white;
 }
 
@@ -177,12 +177,23 @@ body {
     border-radius: 5px;
 }
 
-
-
 div.container-fluid.category-title {
     font-family: 'Bungee', cursive;
     background-color: rgba(75, 71, 71, 0.897);
     color: rgb(181, 237, 247);
     font-weight: bold;
     box-shadow: 0 1px 2px black;
+    margin-bottom: 15px;
+}
+
+div.container-fluid.category-title .postbutton {
+    float: right;
+    border-radius: 5px;
+    background-color: white;
+    margin-bottom: 5px;
+    font-family: BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+}
+
+div.container.top-post {
+    margin-top: 20px;
 }
