--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -18,8 +18,8 @@
       </div>
       <div class="card" style="width: 18rem;">
       <ul class="list-group list-group-flush d-flex justify-content-between align-items-center">
-        <% @states.each do |state| %>
-          <li class="category-listing"><a href="/categories/<%=state.name%>/posts" class=""><%=state.name.split(" ").map{|x| x.capitalize}.join(" ")%><span class="badge pull-right">#</span></a></li> 
+        <% @categories.each do |category| %>
+          <li class="category-listing"><a href="/categories/<%=category.title%>/posts" class=""><%=category.title.split(" ").map{|word| word.capitalize}.join(" ")%><span class="badge pull-right">#</span></a></li> 
         <% end %>
       </ul>
     </div>
