--- a/app/views/categories/show.erb
+++ b/app/views/categories/show.erb
@@ -1,4 +1,3 @@
-
 <div class="container-fluid category-title">
   <div class="row">
     <div class ="col-8">
@@ -15,6 +14,8 @@
     </div>
   </div>
 </div>
+
+<section class="flashmessage"><%= flash[:message] %></section>
 
 <% @posts.each do |post| %>
 
