--- a/app/views/posts/show.erb
+++ b/app/views/posts/show.erb
@@ -1,3 +1,5 @@
+<section class="flashmessage"><%= flash[:message] %></section>
+
 <div class= "container top-post">
     <div class= "row">
         <div class="col-sm-10 offset-sm-1 col-md-10 offset-md-1 col-lg-10 offset-lg-1">
