--- a/app/views/posts/edit.erb
+++ b/app/views/posts/edit.erb
@@ -43,22 +43,22 @@ Original Post:
                 <h5>Editing your post in <%=@category.title.capitalize%></h5>
                 <div class="form-group">
                     <label for="title">Title</label>
-                    <input type="text" class="form-control" name="title" placeholder="<%= @post.title %>">
+                    <input type="text" class="form-control" name="post[title]" placeholder="<%= @post.title %>">
                 </div>
 
                 <div class="form-group">
                     <label for="exampleFormControlInput1">City</label>
-                    <input type="text" class="form-control" name="city" placeholder="<%= @post.city %>">
+                    <input type="text" class="form-control" name="post[city]" placeholder="<%= @post.city %>">
                 </div>
 
                 <div class="form-group">
                     <label for="location">Location</label>
-                    <input type="text" class="form-control" name="location" placeholder="<%= @post.location %>">
+                    <input type="text" class="form-control" name="post[location]" placeholder="<%= @post.location %>">
                 </div>
 
                 <div class="form-group">
                     <label for="content">Content</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" name="content" rows="3" placeholder="<%= @post.content %>"></textarea>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" name="post[content]" rows="3" placeholder="<%= @post.content %>"></textarea>
                 </div>
 
                 <input type="submit" class="btn btn-primary">
