--- a/app/views/posts/new.erb
+++ b/app/views/posts/new.erb
@@ -6,22 +6,22 @@
             <h5>Creating a New Post for <%=@category.title.capitalize%></h5>
             <div class="form-group">
                 <label for="title">Title</label>
-                <input type="text" class="form-control" name="title" placeholder="The Spiciest Salsa Ever...">
+                <input type="text" class="form-control" name="post[title]" placeholder="The Spiciest Salsa Ever...">
             </div>
 
             <div class="form-group">
                 <label for="exampleFormControlInput1">City</label>
-                <input type="text" class="form-control" name="city" placeholder="Chicago...">
+                <input type="text" class="form-control" name="post[city]" placeholder="Chicago...">
             </div>
 
             <div class="form-group">
                 <label for="location">Location</label>
-                <input type="text" class="form-control" name="location" placeholder="ABC Restaurant...">
+                <input type="text" class="form-control" name="post[location]" placeholder="ABC Restaurant...">
             </div>
 
             <div class="form-group">
                 <label for="content">Content</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" name="content" rows="3" placeholder="Tell us about what you found..."></textarea>
+                <textarea class="form-control" id="exampleFormControlTextarea1" name="post[content]" rows="3" placeholder="Tell us about what you found..."></textarea>
             </div>
 
             <input type="submit" class="btn btn-primary">
