--- a/app/views/users/create_new.erb
+++ b/app/views/users/create_new.erb
@@ -7,21 +7,21 @@
                 <div class="form-group row">
                     <label for="username" class="col-sm-2 col-form-label">Username</label>
                     <div class="col-sm-10">
-                    <input type="text" class="form-control" id="username" name="username" placeholder="Username">
+                    <input type="text" class="form-control" id="username" name="user[username]" placeholder="Username">
                     <div class="reminder">*Required</div>
                     </div>
                 </div>
                 <div class="form-group row">
                     <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
                     <div class="col-sm-10">
-                    <input type="email" class="form-control" id="inputEmail3" name="email" placeholder="Email">
+                    <input type="email" class="form-control" id="inputEmail3" name="user[email]" placeholder="Email">
                     <div class="reminder">*Required</div>
                     </div>
                 </div>
                 <div class="form-group row">
                     <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
                     <div class="col-sm-10">
-                    <input type="password" class="form-control" id="inputPassword3" name="password" placeholder="Password">
+                    <input type="password" class="form-control" id="inputPassword3" name="user[password]" placeholder="Password">
                     <div class="reminder">*Required</div>
                     </div>
                 </div>
