added delete button and delete route for posts

--- a/app/views/posts/edit.erb
+++ b/app/views/posts/edit.erb
@@ -83,3 +83,8 @@ Original Post:
        
     </div> <!-- close .container -->
 </form>
+
+<form action="/categories/<%= @category.title %>/posts/<%= @post.id %>/delete" method="post">
+    <input id="hidden" type="hidden" name="_method" value="delete">
+    <input type="submit" value="Delete">
+</form>
