added edit form for user, updated user views

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -33,7 +33,7 @@
                     <%= current_user.username %>
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="#">My Profile</a>
+                    <a class="dropdown-item" href="/users/profile/<%= current_user.id %>">My Profile</a>
                     <a class="dropdown-item" href="/users/logout">Log Out</a>
                   </div>
                 </li>                     
