updated users show html spacing

--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -25,7 +25,6 @@
     <div class="container posting">
       <div class="row">
           <div class="col-sm-8 offset-sm-2 col-md-8 offset-md-2 col-lg-8 offset-lg-2">
-    
             <div class="post">
               <div class="row">
                 <div class="col-3 user-info pull-left align-self-center">
@@ -47,14 +46,10 @@
                 </div>
                   
                 <div class="postbottom">
-                
-                    <div class="clearfix">
-                    
-                    </div>
+                    <div class="clearfix"></div>
                 </div>
               </div> <!-- close .row -->
             </div> <!-- close .post -->
-    
          </div> <!-- close .col-sm -->
       </div> <!-- close .row -->
     </div> <!-- close.container-posting -->
