--- a/app/views/posts/show.erb
+++ b/app/views/posts/show.erb
@@ -1,105 +1,113 @@
 <div class="container-fluid category-title">
-  <div class="row">
-    <div class ="col-8">
-      <nav aria-label="breadcrumb customnav">
-      <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="/">Home</a></li>
-        <li class="breadcrumb-item"><a href="/categories/<%= @category.title %>/posts"><%= @category.title.capitalize %></a></li>
-      </ol>
-      </nav>
-    </div>
+    <div class="row">
+        <div class ="col-8">
+        <nav aria-label="breadcrumb customnav">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="/">Home</a></li>
+                <li class="breadcrumb-item"><a href="/categories/<%= @category.title %>/posts"><%= @category.title.capitalize %></a></li>
+            </ol>
+        </nav>
+        </div> <!-- close .col -->
 
-    <div class=col-4 ml-1">
-      <form action="/categories/<%= @category.title %>/posts/new"> <input type="submit" class="postbutton" value="New Post"> </form>
-    </div>
-  </div>
-</div>
+        <div class=col-4 ml-1">
+        <form action="/categories/<%= @category.title %>/posts/new"> <input type="submit" class="postbutton" value="New Post"> </form>
+        </div>
+    </div> <!-- close .row -->
+</div> <!-- close .container-fluid -->
 
-<section class="flashmessage"><%= flash[:message] %></section>
+<div class="container-fluid">
+    <section class="flashmessage"><%= flash[:message] %></section>
 
-<section class="content">
-    <div class= "container-fluid">
-        <div class= "row">
-            <div class="col-lg-8 col-md-8">
-                <div class="post">
-                    <div class="top-wrap">
-                        <div class="user-info pull-left">
-                            <div class="avatar">
-                                <img src="../images/no-photo.png" class="align-self-center mr-2">
-                                <span><%= (User.find(@post.user_id)).username %></span>
-                                <form><input type="button" value="+1" class="like-button align-self-center mr-2"> <%= @post.score %></form>
-                            </div> <!-- close .avatar -->
-                        </div> <!-- close .user-info -->
-                                
-                        <div class="post-info pull-left">
-                            <div class="post-title post-info pull-left">
-                                <span><%= @post.city.split(" ").map{|word| word.capitalize}.join(" ") %> / <%= @post.title %></span>
-                                <span><%= @post.location %></span>
-                            </div>
-                            <span><%= @post.content %></span>    
-                            <span class="post-footer">Posted at <%= @post.created_at %></span>
-                        </div> <!-- close .post-info -->
-                    </div> <!-- close .top-wrap -->
-                            
-                    <div class="postbottom">
-                        <div class="row" id="button-row">
-                            <% if logged_in && @post.user_id == current_user.id %>
-                                <form action="/categories/<%= @category.title %>/posts/<%= @post.id %>/edit" method="get">
-                                    <input type="submit" value="Edit">
-                                </form>
-                            <% else %>
-                                <form action="/categories/<%= @category.title %>/posts/<%= @post.id %>/comments/new" method="get">
-                                    <input type="submit" value="Reply">
-                                </form>
-                            <% end %>    
-                        </div> <!-- close .row -->          
-                    </div> <!-- close .postbottom -->
-                </div> <!-- close .post -->
-        
-                        
-                <% @comments.each do |comment| %>
-                    <div class="comment">  
-                        <div class="row">
-                            <div class="user-info pull-left align-self-center">
+    <section class="content">
+        <div class= "container-fluid">
+            <div class= "row">
+                <div class="col-lg-8 col-md-8">
+                    <div class="post">
+                        <div class="top-wrap">
+                            <div class="user-info pull-left">
                                 <div class="avatar">
                                     <img src="../images/no-photo.png" class="align-self-center mr-2">
-                                    <span><%=(User.find(comment.user_id)).username%></span>
-                                    <form><input type="button" value="+1" class="like-button align-self-center mr-2"> <%=comment.score%></form>
+                                    <span><%= (User.find(@post.user_id)).username %></span>
+                                    <form><input type="button" value="+1" class="like-button align-self-center mr-2"> <%= @post.score %></form>
                                 </div> <!-- close .avatar -->
                             </div> <!-- close .user-info -->
-                        
-                            <div class="comment-info pull-left">
-                                <span><%=comment.content%></span>    
-                                <span class="comment-footer">Posted at <%= comment.created_at %></span>
-                            </div> <!-- close .comment-info -->
-                        
-                            <div class="row">
-                            <div class="commentbottom">
-                                <% if logged_in && comment.user_id == current_user.id %>
-                                    <form action="/categories/<%= @category.title %>/posts/<%= @post.id %>/comments/<%= comment.id %>/edit" method="get">
-                                        <input type="submit" value="Edit">
+                                    
+                            <div class="post-info pull-left">
+                                <div class="post-title post-info pull-left">
+                                    <span><%= @post.city.split(" ").map{|word| word.capitalize}.join(" ") %> / <%= @post.title %></span>
+                                    <span><%= @post.location %></span>
+                                </div>
+                                <span><%= @post.content %></span>    
+                                <span class="post-footer">Posted at <%= @post.created_at %></span>
+                            </div> <!-- close .post-info -->
+                        </div> <!-- close .top-wrap -->
+                                
+                        <div class="postbottom">
+                                <% if logged_in && @post.user_id == current_user.id %>
+                                    <form action="/categories/<%= @category.title %>/posts/<%= @post.id %>/edit" method="get">
+                                        <input type="submit" class="cbut" value="Edit">
                                     </form>
                                 <% else %>
                                     <form action="/categories/<%= @category.title %>/posts/<%= @post.id %>/comments/new" method="get">
-                                        <input type="submit" value="Reply">
+                                        <input type="submit" class="cbut" value="Reply">
                                     </form>
-                                <% end %>  
-                            </div> <!-- close .commentbottom -->
-                            </div>
+                                <% end %>            
+                        </div> <!-- close .postbottom -->
+                    </div> <!-- close .post -->
+            
+                            
+                    <% @comments.each do |comment| %>
+                        <div class="row new-comment">
+                            <div class="col-lg-10 col-md-10">
+                                <div class="comment"> 
+                                    <div class="top-wrap"> 
+                                        <div class="user-info pull-left">
+                                            <div class="avatar">
+                                                <p><img src="../images/no-photo.png" class="align-self-center mr-2"></p>
+                                        
+                                                <p><form><input type="button" value="+1" class="like-button align-self-center mr-2"> <%=comment.score%></form></p>
+                                            </div> <!-- close .avatar -->
+                                        </div> <!-- close .user-info -->
+                                    
+                                        <div class="comment-info pull-left">
+                                            <p><span class="w-auto"><%=(User.find(comment.user_id)).username%>:</span></p>
+                                            <p><span><%=comment.content%></span></p> 
+                                            <p><span class="comment-footer">Posted at <%= comment.created_at %></span></p>
+                                        </div> <!-- close .comment-info -->
+                                    </div> <!-- close .top-wrap -->
+                                        
+                                        
+                                </div> <!-- close .comments -->
+                            </div> <!-- close .col -->
+                            <div class="col-lg-2 col-md-2 cresp">
+                                        <div class="commentbottom ">
+                                            <% if logged_in && comment.user_id == current_user.id %>
+                                                <form action="/categories/<%= @category.title %>/posts/<%= @post.id %>/comments/<%= comment.id %>/edit" method="get">
+                                                    <input type="submit" class="cbut" value="Edit">
+                                                </form>
+                                            <% else %>
+                                                <form action="/categories/<%= @category.title %>/posts/<%= @post.id %>/comments/new" method="get">
+                                                    <input type="submit" class="cbut" value="Reply">
+                                                </form>
+                                            <% end %>  
+                                        </div> <!-- close .commentbottom -->
+                                    
+                                        </div>
+                                        
                         </div> <!-- close .row -->
-                    </div> <!-- close .comments -->
-                <% end %>
-            </div> <!-- close .col-lg-8 -->
+                    <% end %>
+                </div> <!-- close .col-lg-8 -->
 
-            <div class="col-lg-4 col-md-4">
-                <div class="card" style="width: 18rem;">
-                    <ul class="list-group list-group-flush d-flex justify-content-between align-items-center">
-                        <% @categories.each do |category| %>
-                            <li class="category-listing"><a href="/categories/<%=category.title%>/posts" class=""><%=category.title.split(" ").map{|word| word.capitalize}.join(" ")%><span class="badge pull-right">#</span></a></li> 
-                        <% end %>
-                    </ul>
-                </div> <!-- close .card -->
-            </div> <!-- close .col-lg-4 -->
-        </div> <!-- close .row -->
-    </div> <!-- close .container -->
-</section>
+                <div class="col-lg-4 col-md-4">
+                    <div class="card" style="width: 18rem;">
+                        <ul class="list-group list-group-flush d-flex justify-content-between align-items-center">
+                            <% @categories.each do |category| %>
+                                <li class="category-listing"><a href="/categories/<%=category.title%>/posts" class=""><%=category.title.split(" ").map{|word| word.capitalize}.join(" ")%><span class="badge pull-right">#</span></a></li> 
+                            <% end %>
+                        </ul>
+                    </div> <!-- close .card -->
+                </div> <!-- close .col-lg-4 -->
+            </div> <!-- close .row -->
+        </div> <!-- close .container -->
+    </section>
+</div>
