--- a/public/css/style.css
+++ b/public/css/style.css
@@ -121,15 +121,16 @@ body {
     border-radius: 8px;
     box-shadow: 0 1px 2px black;
     margin-bottom: 20px;
+    display: inline-block;
 }
 
 .post .user-info {
-    width: 12%;
+    width: 15%;
     padding: 15px 0 15px 15px;
 }
 
 .post .post-info {
-    width: 88%;
+    width: 85%;
     padding-right: 30px;
     padding-top: 20px;
     padding-bottom: 15px;
@@ -163,6 +164,7 @@ body {
     border-radius: 8px;
     box-shadow: 0 1px 2px black;
     margin-bottom: 20px;
+    display: inline-block;
 }
 
 .comment .user-info {
@@ -172,6 +174,7 @@ body {
 
 .comment .comment-info {
     width: 85%;
+    padding-left: 20px;
     padding-right: 30px;
     padding-top: 20px;
     padding-bottom: 15px;
@@ -200,6 +203,10 @@ body {
     line-height: 15px;
 }
 
+.cbut {
+    border-radius: 5px;
+}
+
 .avatar {
     position: relative;
 }
@@ -216,6 +223,10 @@ body {
     border-radius: 5px;
 }
 
+.username {
+    
+}
+
 div.container-fluid.category-title {
     font-family: 'Bungee', cursive;
     background-color: rgba(75, 71, 71, 0.897);
@@ -223,6 +234,11 @@ div.container-fluid.category-title {
     font-weight: bold;
     box-shadow: 0 1px 2px black;
     margin-bottom: 15px;
+    padding-left: 0px!important;
+    padding-right: 0px!important;
+    margin-left: 0!important;
+    margin-right: 0!important;
+    width: 100%;
 }
 
 div.container-fluid.category-title .postbutton {
@@ -253,7 +269,14 @@ ol.breadcrumb a {
     width: 100%;
   }
 
+
+
+div.row.new-comment {
+    height: auto;
+}
+
   @media (min-width: 992px)
 .col-md-8 {
     width: 66.66666667%;
 }
+
