--- a/app/views/categories/show.erb
+++ b/app/views/categories/show.erb
@@ -55,7 +55,7 @@
                   <% end %>
                 </div>      
                 <div class="col-lg-3 col-md-3">
-                    <div class="card mx-auto" style="width: 10rem;">
+                    <div class="card mx-auto cats-list" style="width: 10rem;">
                         <ul class="list-group list-group-flush d-flex justify-content-between align-items-left align-content-center ml-3">
                             <% @categories.each do |category| %>
                                 <li class="category-listing"><a href="/categories/<%=category.title%>/posts" class=""><%=category.title.split(" ").map{|word| word.capitalize}.join(" ")%><span class="badge pull-right">#</span></a></li> 
