--- a/app/views/posts/show.erb
+++ b/app/views/posts/show.erb
@@ -21,7 +21,7 @@
     <section class="content">
         <div class= "container-fluid">
             <div class= "row">
-                <div class="col-lg-8 col-md-8">
+                <div class="col-lg-9 col-md-9">
                     <div class="post">
                         <div class="top-wrap">
                             <div class="user-info pull-left">
@@ -100,9 +100,9 @@
                     <% end %>
                 </div> <!-- close .col-lg-8 -->
 
-                <div class="col-lg-4 col-md-4">
-                    <div class="card" style="width: 18rem;">
-                        <ul class="list-group list-group-flush d-flex justify-content-between align-items-center">
+                <div class="col-lg-3 col-md-3">
+                    <div class="card mx-auto cats-list" style="width: 10rem;">
+                        <ul class="list-group list-group-flush d-flex justify-content-between align-items-left align-content-center ml-3">
                             <% @categories.each do |category| %>
                                 <li class="category-listing"><a href="/categories/<%=category.title%>/posts" class=""><%=category.title.split(" ").map{|word| word.capitalize}.join(" ")%><span class="badge pull-right">#</span></a></li> 
                             <% end %>
