--- a/public/css/style.css
+++ b/public/css/style.css
@@ -228,6 +228,12 @@ body {
     margin-left: 25px;
 }
 
+.card.mx-auto.cats-list {
+    background-color: #ffffff;
+    border-radius: 8px;
+    box-shadow: 0 1px 2px black;
+}
+
 div.container-fluid.category-title {
     font-family: 'Bungee', cursive;
     background-color: rgba(75, 71, 71, 0.897);
